--- a/templates/index.html
+++ b/templates/index.html
@@ -89,13 +89,13 @@
         </div>
 
         <div>
-            <label for="emailFile2">Upload second CSV file with emails:</label>
-            <input type="file" id="emailFile2" name="emailFile2" accept=".csv" required>
+            <label for="emailFile2">Upload second CSV file with emails (optional):</label>
+            <input type="file" id="emailFile2" name="emailFile2" accept=".csv">
         </div>
 
         <div>
-            <label for="percentage2">Percentage from second file:</label>
-            <input type="number" id="percentage2" name="percentage2" placeholder="e.g., 80" min="1" max="100" required>
+            <label for="percentage2">Percentage from second file (optional):</label>
+            <input type="number" id="percentage2" name="percentage2" placeholder="e.g., 80" min="1" max="100">
         </div>
 
         <div>
