--- a/templates/index.html
+++ b/templates/index.html
@@ -108,6 +108,11 @@
             <input type="text" id="baseFilename" name="baseFilename" placeholder="e.g., my_emails">
         </div>
 
+        <div>
+            <label for="keyword">Enter keyword to remove rows (optional):</label>
+            <input type="text" id="keyword" name="keyword" placeholder="e.g., yandex.ru">
+        </div>
+
         <input type="submit" value="Generate CSV Files">
     </form>
 
