--- a/templates/index.html
+++ b/templates/index.html
@@ -155,7 +155,7 @@
 
         <!-- Поле для фильтрации по доменам -->
         <div class="form-group">
-            <label for="keyword">Enter keywords to remove rows (optional, separate with commas):</label>
+            <label for="keyword">Enter keywords to filter rows (optional, separate with commas):</label>
             <input type="text" id="keyword" name="keyword" placeholder="e.g., yandex.ru, gmail.com">
         </div>
 
